# OpenGlSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
scripts/: build.bat  run.bat
src/: Application.cpp  Application.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Sandbox.cpp  Sandbox.hpp  Util.cpp  Util.hpp  main.cpp
